Data cleaning file added

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -969,7 +970,7 @@
    ],
    "source": [
     "movies_from_2000_2018 = rt_movie_info[(rt_movie_info['theater_date'] > '2000-01-01') \n",
-    "                                      & (rt_movie_info['theater_date'] <= '2018-12-31')]\n",
+    "                                      & (rt_movie_info['theater_date'] <= '2018-12-31')].copy()\n",
     "movies_from_2000_2018"
    ]
   },
@@ -1036,7 +1037,7 @@
     "#because the amount of NaN values in 'runtime' column is small compared to the amount of the dataset\n",
     "#eliminating rows with NaN values in 'runtime' column\n",
     "#check the NaN values again and see whether the 'runtime' column now has 0 NaN values\n",
-    "movies_from_2000_2018 = movies_from_2000_2018[pd.notnull(movies_from_2000_2018['runtime'])]\n",
+    "movies_from_2000_2018 = movies_from_2000_2018[pd.notnull(movies_from_2000_2018['runtime'])].copy()\n",
     "movies_from_2000_2018.isna().sum()"
    ]
   },
@@ -1083,22 +1084,9 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Quan\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "movies_from_2000_2018['runtime'] = movies_from_2000_2018['runtime'].map(lambda x: x.split(' ', 1)[0])"
+    "movies_from_2000_2018['runtime'] = movies_from_2000_2018['runtime'].map(lambda x: x.split(' ', 1)[0]).copy()"
    ]
   },
   {
@@ -1385,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1411,23 +1399,37 @@
      "text": [
       "int32\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Quan\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
     }
    ],
    "source": [
     "movies_from_2000_2018['runtime'] = movies_from_2000_2018['runtime'].astype(str).astype(int)\n",
     "print(movies_from_2000_2018['runtime'].dtypes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TMDb genre ID values\n",
+    "#action 28\n",
+    "#adventure 12\n",
+    "#animated 16\n",
+    "#comedy 35\n",
+    "#crime 80\n",
+    "#documentary 99\n",
+    "#drama 18\n",
+    "#family 10751\n",
+    "#fantasy 14\n",
+    "#history 36\n",
+    "#horror 27\n",
+    "#music 10402\n",
+    "#mystery 9648\n",
+    "#romance 10749\n",
+    "#sci fi 878\n",
+    "#thriller 53\n",
+    "#TV movie 10770\n",
+    "#war 10752\n",
+    "#western 37"
    ]
   },
   {
