--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -411,7 +411,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
