Question 4 added and modified readme file

--- a/production_cost_effect.ipynb
+++ b/production_cost_effect.ipynb
@@ -914,7 +914,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create a new table 'mov_pop' in the SQL database\n",
+    "#Create a new table 'mov_popularity' in the SQL database\n",
     "cur.execute('''CREATE TABLE mov_popularity(title TEXT PRIMARY KEY,\n",
     "                                           popularity REAL,\n",
     "                                           release_date DATE,\n",
@@ -939,7 +939,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create a new table 'mov_pro' in the SQL database\n",
+    "#Create a new table 'mov_profit' in the SQL database\n",
     "cur.execute('''CREATE TABLE mov_profit(title TEXT PRIMARY KEY,\n",
     "                                       id INTEGER,\n",
     "                                       release_date DATE,\n",
