Modified Question 2 and readme file

--- a/duration_effect.ipynb
+++ b/duration_effect.ipynb
@@ -1285,7 +1285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a new SQL database and import three existing Pandas dataframes to it"
+    "## Create new SQL databases and import three existing Pandas dataframes to them"
    ]
   },
   {
